Switch formatter to forked google-java-format CLI in dedicated JVM